--- a/src/views/biz/style/curd.scss
+++ b/src/views/biz/style/curd.scss
@@ -32,5 +32,9 @@
         &-list {
             height: calc(100% - 42px);
         }
+
+        &-list-only {
+            height: 100%;
+        }
     }
 }
